# bloginya

./: LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: build_cool_asia.yml  build_front.yml  build_hpotato_back.yml  build_hpotato_cool_asia.yml  build_hpotato_front.yml  deploy.yml  deploy_back.yml  deploy_front.yml  deploy_hpotato.yml  deploy_hpotato_back.yml  deploy_hpotato_front.yml  dev_build_back.yml  dev_build_backups.yml  dev_build_cool_audio.yml  dev_build_front.yml  dev_deploy.yml  prod_build_back.yml  prod_build_backups.yml  prod_build_cool_audio.yml  prod_deploy.yml
back/: .dockerignore  .gitignore  Dockerfile  Dockerfile.base  README.md  bloginya.yml.sample  cpanfile  cpanfile.snapshot  log4perl.conf
back/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
back/db/: pgmig.sql
back/docs/: plugins.md
back/lib/: Bloginya.pm
back/script/: bloginya
back/t/: add.t  basic.t  model_prosemirror.t  service_language.t  util_coolid.t  util_uuid.t
backups/: Dockerfile  backups.json  go.mod  go.sum  main.go
cool_asia/: Dockerfile  README.md  main.py  pyproject.toml
cool_audio/: .gitignore  Dockerfile  Makefile  README.md  config.go  config.json  go.mod  main.go  main_test.go
front/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json  proxy.conf.json
front/src/: _mixins.scss  _theme-colors.scss  index.html  server.ts  styles.scss
front/src/app/: app.component.html  app.component.scss  app.component.ts  app.config.server.ts  app.config.ts  app.routes.server.ts  app.routes.ts  footer.ts  (+13 more)
(+395 files in other folders)
